<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by sleepy on 17-5-5 下午2:40
  ~ Copyright (c) 2017.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sleepy.ebdatatransfer03.BluetoothActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/local_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:elevation="5dp"
        android:layout_margin="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/local_param"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/custom_background"
                >
                <TextView
                    android:id="@+id/param_t_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/local_title"/>
                <TextView
                    android:id="@+id/param_t_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/param_t_1"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:textColor="@color/local_text"
                    android:text="@string/local_name"/>
                <TextView
                    android:id="@+id/param_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/param_t_1"
                    android:layout_alignParentEnd="true"
                    android:textSize="16sp"
                    android:padding="10dp"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_below="@+id/local_param"
                android:layout_alignParentEnd="true"
                >

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/showData"
                    android:onClick="startData"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="startBluetooth"

                    android:text="@string/open_bluetooth"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="92dp"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="closeBluetooth"
                    android:text="@string/close_bluetooth"
                    android:id="@+id/button2"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/function_container"
        app:cardCornerRadius="10dp"
        android:elevation="5dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paired_device"
                    android:padding="10dp"
                    android:textSize="16sp"/>

                <ListView
                    android:id="@+id/list_paired"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </ListView>
            </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/available_device"
                   android:padding="10dp"
                   android:textSize="16sp"/>

               <ListView
                   android:id="@+id/list_available"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

               </ListView>
           </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
